--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Igreja Batista Shalom
+title: Home
 author:
-  name: IBS
+  name: Igreja Batista Shalom
   email: contato@batistashalom.com.br
 
 # The `>` after `description:` means to ignore line-breaks until next key.
