--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,16 @@
-title: Home
+title: Edutech 
 author:
-  name: Igreja Batista Shalom
-  email: contato@batistashalom.com.br
+  name: Jario Swami
+  email: jariolog@gmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  Vocês, porém, são geração eleita, sacerdócio real, nação santa, povo exclusivo de Deus,
-   para anunciar as grandezas daquele que os chamou das trevas para a sua maravilhosa luz.
-    Antes vocês nem sequer eram povo, mas agora são povo de Deus; não haviam recebido misericórdia, mas agora a receberam.
-   1 Pedro 2:9-10.
+  Jario é meu nome, minha doutrina pessoal inicia e termina no fogo, que é a consciência.
+  Minha fé inicia e termina no Self, que é o atman. A Natureza é meu atanor.
+  Estudei química, física e pedagogia formalmente na universidade (UnB), 
+  contudo assuntos como música, astronomia, botânica, artes, fotografia, magia, meditação, yoga, etc,
+  foram acumulados autodidaticamente.
 
 # Build settings
 
@@ -29,21 +30,21 @@ minima:
 
   # Generate social links in footer.
   #
-     social_links:
+  # social_links:
   #   - { platform: devto,          user_url: "https://dev.to/jekyll" }
   #   - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
-      - { platform: facebook,       user_url: "https://www.facebook.com/batistashalomoficial" }
+  #   - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
   #   - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-  #   - { platform: github,         user_url: "https://robsonamr.github.io" }
+  #   - { platform: github,         user_url: "https://github.com/jekyll/minima" }
   #   - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
-      - { platform: instagram,      user_url: "https://www.instagram.com/igrejabatistashalomoficial/" }
+  #   - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
   #   - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
   #   - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
   #   - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
   #   - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
   #   - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
   #   - { platform: telegram,       user_url: "https://t.me/jekyll" }
-  #   - { platform: twitter,        user_url: "https://twitter.com/robson_allmeiida" }
+  #   - { platform: twitter,        user_url: "https://twitter.com/jekyllrb" }
   #   - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
 
 # If you want to link only specific pages in your header, uncomment this and add the path to the pages in
